Amospikins js-project

--- a/style.scss
+++ b/style.scss
@@ -57,7 +57,7 @@ border-radius: 5px;
     text-align: center;
     margin-bottom: 18px;
     .info-txt span{
-        color:#aa57cc
+        color:#aa57cc;
     }
 }
 header{
